<resources>
    <string name="app_name">Sailance</string>
    <string name="catchphrase">sailing free</string>
    <string name="welcomeMessage">Welcome to Sailance\n Managing your club made easy</string>
    <string name="mainSignup">Club not using sailance\? Sign Up Here!</string>

    <string name="clubPrompt">Launch Club Account</string>
    <string name="IndividualButton">Open Individual Account</string>
    <string name="IndividualPromt">Not a member\?\nFollow your club activities with your individual account</string>


    <string name="registerSailingClub">Not on Sailance\? Register your sailing club Now!</string>
    <string name="openClubAccount">Go to your sailing club account</string>
    <string name="clubSignIn">Already Registered\? Sign in here!</string>
    <string name="logintext">Login</string>
    <string name="signup">Not a Member? Sign Up Now!</string>

    <string name="userNameHint">Username</string>
    <string name="emailHint">Email Address</string>
    <string name="passwordHint">Password </string>
    <string name="signin">Sign in to Sailance</string>

    <string name="clubHandleHint">Club Handle</string>
    <string name="clubPasscodeHint">Passcode</string>
    <string name="togoClub">Club Account</string>
    <string name="togoindividual">Sign in</string>

    <string name="incorrectCredentials">Username or Password Incorrect</string>
    <string name="forgotPassword"><u>Forgot password\?</u></string>
    <string name="haveAccountLink">Already have account\? Sign in here</string>
    <string name="fullName">Full Name: </string>
    <string name="club">Club: </string>
    <string name="fullNameHint">Full Name</string>
    <string name="clubHint">Home Club </string>
    <string name="registerUserButton">Submit</string>

    <string name="clubNameHint">Club Name in Full</string>
    <string name="clubHandleRegistrationHint">Club Handle</string>
    <string name="clubLocationHint">Location- Area Code</string>
    <string name="countryHint">Country of Operation</string>

    <string name="personalAccount">Want a personal account\?</string>
    <string name="clubAccountOpenPrompt">Open Club Account</string>
    <string name="accountFrozen">Login Disabled. Contact Club Administrator</string>
    <string name="logout">Log out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="name">Club Name</string>
    <string name="website">www.club.com</string>

    <!-- Navigation Drawer menu labels (Administrative) -->
    <!--<string name="nav_home">Home</string>-->
    <string name="nav_new_members">Add New Members</string>
    <string name="nav_manage_members">Manage Member Details</string>
    <string name="nav_add_admin">Add Admin</string>

    <string name="member_registered">Members registered with club</string>

    <string name="add_new_members">Add new members of your sailing club here</string>

    <string name="add_new_members_empty">Add club members from here</string>


    <string name="no_members">You have not added any members yet.\nAdd members and enjoy easy club administration with Sailance!</string>

    <string name="view_admin">Admin and Privileges</string>
    <string name="add_new_admin">Add another administrator here!</string>

    <string name="manage_members">Can add and modify member details</string>
    <string name="race_and_handicap">Can only work on race and handicaps</string>
    <string name="all_privileges">Change change any information for the club</string>

    <string name="first_name_admin">First Name</string>
    <string name="last_name_admin">Last Name</string>
    <string name="privileges">Privileges</string>
    <string name="admin_email">Email</string>
    <string name="default_password">Default Password</string>
    <string name="add_admin">Add Admin</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Add New Members</item>
        <item>Update Member Details</item>
        <item>Add Another Admin</item>
    </string-array>

    <!--Handicaps-->
    <string name="handicap_links">Handicaps</string>
    <string name="personal_handicap">View Personal Handicap</string>
    <string name="boat_handicap">Add or Modify Boat Handicaps</string>

    <!--races-->
    <string name="races_link">Races</string>
    <string name="activity_race_history">View Previous Races</string>
    <string name="activity_title_new_race">Start New Race</string>

    <string name="others">Other</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_about_us">About us</string>

    <string name="action_logout">Logout</string>
    <string name="action_delete">Delete</string>
    <string name="add_new_handicap">Add New Handicap</string>

    <string name="action_download_record">Download SpreadSheet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="get">Get</string>
    <string name="members">Name</string>
    <string name="boatID">Sail Number</string>
    <string name="boatType">Rig (Boat Type)</string>
    <string name="personalHandicap">Personal Handicap</string>
    <string name="addToRace">Save and Add Another Sailor</string>
    <string name="startRace">Start Race</string>
    <string name="addGuestMember">Add Guest Sailor</string>
    <string name="guestSailorName">Name of Guest Sailor</string>
    <string name="guestSailorBoatNumber">Boat Number of Guest Sailor</string>
    <string name="guestSailorRig">Rig (Boat Type)</string>
    <string name="guestSailorHandicap">Personal Handicap (0 if not there)</string>

    <string name="nameOfParticipant">Name</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="startall">Start All</string>
    <string name="stopall">Stop All</string>
    <string name="timeValue">00:00:000</string>

    <string name="participant">participant</string>
    <string name="timeElapsed">Time Elapsed</string>
    <string name="openDatabase">D</string>

    <!--details of members-->
    <string name="first_name_of_member">First Name</string>
    <string name="last_name_of_member">Last Name (Surname)</string>
    <string name="sex">Sex</string>
    <string name="date_birth">Date of Birth</string>
    <string name="date_hint">double click to choose date</string>
    <string name="email_of_member">Email</string>
    <string name="addNewMember">Register Member</string>


    <!--Update member details -->
    <string name="name_of_member">Name </string>
    <string name="isSubscriptionPaid">Monthly subscription paid </string>
    <string name="updateSubscription">Update Member Subscription</string>

    <string name="subscription_paid">Yes</string>
    <string name="subscription_not_paid">No</string>
</resources>
